# RustyTasks

./: Cargo.toml  README.md  sqlx-data.json  tasks.db
src/: main.rs
