[package]
name = "rt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.3", features = ["derive"] }
directories = "5.0.1"
prettytable = "0.10.0"
rand = "0.8.5"
sqlx = { version = "0.6.3", features = ["sqlite", "runtime-tokio-rustls"] }
termimad = "0.23.0"
textwrap = "0.16.0"
tokio = { version = "1.28.2", features = ["full"] }
