[package]
name = "rusty_tasks"
version = "0.1.0"
edition = "2021"
authors = ["Brighton Cox <brightonlcox@gmail.com>"]
license = "MIT or Apache-2.0"
description = "Your own terminal todo-list"
homepage = "https://github.com/TheEmeraldBee/RustyTasks"
repository = "https://github.com/TheEmeraldBee/RustyTasks"
keywords = ["cli", "to-do", "terminal"]
categories = ["command-line-utils"]

[[bin]]
name = "rt"
path = "src/main.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.3", features = ["derive"] }
directories = "5.0.1"
prettytable = "0.10.0"
rand = "0.8.5"
sqlx = { version = "0.6.3", features = ["sqlite", "runtime-tokio-rustls", "offline"] }
termimad = "0.23.0"
textwrap = "0.16.0"
tokio = { version = "1.28.2", features = ["full"] }
